--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,22 @@
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1631874778482/work
-bleach==5.0.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-certifi==2022.6.15
-cffi @ file:///C:/ci_310/cffi_1642682485096/work
+certifi==2020.6.20
 chardet==3.0.4
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click==8.1.3
-colorama==0.4.4
-colorgram.py==1.2.0
-cryptography @ file:///C:/ci/cryptography_1639472366776/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-debugpy==1.6.0
-decorator==5.1.1
-defusedxml==0.7.1
-dnspython==2.2.1
+click==7.1.2
 dominate==2.5.2
-email-validator==1.2.1
-entrypoints==0.4
-executing==0.8.3
-fastjsonschema==2.15.3
-Flask==2.1.2
+Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.4.1
 Flask-Gravatar==0.5.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
-fonttools==4.33.3
-greenlet==1.1.2
-gunicorn==20.1.0
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-importlib-metadata==4.11.3
-importlib-resources==5.7.1
-ipykernel==6.13.0
-ipython==8.3.0
-ipython-genutils==0.2.0
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.0.3
-joblib==1.1.0
-jsonschema==4.5.1
-jupyter-client==7.3.1
-jupyter-core==4.10.0
-jupyterlab-pygments==0.2.2
-kaggle==1.5.12
-kiwisolver @ file:///C:/ci/kiwisolver_1653292408254/work
-lxml @ file:///C:/ci/lxml_1646642826951/work
-MarkupSafe==2.1.1
-matplotlib @ file:///C:/ci/matplotlib-suite_1647423638658/work
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186184278/work
-mkl-service==2.4.0
-mpmath==1.2.1
-munkres==1.1.4
-nbclient==0.6.3
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-nltk==3.7
-notebook==6.4.11
-numexpr @ file:///C:/ci/numexpr_1640704408721/work
-numpy @ file:///C:/ci_310/numpy_and_numpy_base_1643798589088/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/ci/pandas_1645002492103/work
-pandas-datareader==0.10.0
-pandocfilters==1.5.0
-parso==0.8.3
-patsy==0.5.2
-pickleshare==0.7.5
-Pillow==9.0.1
-plotly==5.8.2
-prettytable==3.1.1
-prometheus-client==0.14.1
-prompt-toolkit==3.0.29
-psutil==5.9.1
-pure-eval==0.2.2
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments==2.12.0
-PyJWT==2.3.0
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyperclip==1.8.2
-pyrsistent==0.18.1
-PySocks @ file:///C:/ci/pysocks_1605287845585/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-python-slugify==6.1.2
-pytz==2021.3
-pywin32==304
-pywinpty==2.0.5
-pyzmq==23.0.0
-regex==2022.7.25
-requests==2.28.1
-scikit-learn==1.1.1
-scipy==1.8.1
-seaborn==0.11.2
-selenium @ file:///C:/ci/selenium_1614268348533/work
-Send2Trash==1.8.0
-sip==4.19.13
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1636706018808/work
-spotipy==2.19.0
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+requests==2.24.0
 SQLAlchemy==1.3.19
-stack-data==0.2.0
-statsmodels==0.13.2
-sympy==1.10.1
-tenacity==8.0.1
-terminado==0.15.0
-text-unidecode==1.3
-threadpoolctl==3.1.0
-tinycss2==1.1.1
-tornado @ file:///C:/ci/tornado_1606942392901/work
-tqdm==4.64.0
-traitlets==5.2.1.post0
-twilio==7.7.1
-urllib3 @ file:///C:/ci/urllib3_1650640043075/work
+urllib3==1.25.10
 visitor==0.1.3
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.0
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306167264/work
-wincertstore==0.2
-wordcloud @ file:///D:/bld/wordcloud_1656501619498/work
+Werkzeug==1.0.1
 WTForms==2.3.3
-zipp==3.8.0
+
