--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+matplotlib==3.5.1
+pandas==1.4.1
 pandas_datareader==0.10.0
 requests==2.24.0
 SQLAlchemy==1.3.19
